tests/fixtures/valid/spec_reuse/spec.etcm
spec DataConfig:
  train_file: Path = Field(path_exists="allow_missing", path_kind="file")
  retries: int = Field(default=2, gt=0)
