tests/fixtures/invalid/missing_required.etcm
spec MissingRequired:
  name: str
  retries: int = Field(default=1)

impl default:
  retries: 2
